環境変数テンプレートを更新（プロダクションデプロイ対応）

--- a/financials/.env.example
+++ b/financials/.env.example
@@ -1,5 +1,29 @@
-# Update these with your Supabase details from your project settings > API
-# https://app.supabase.com/project/_/settings/api
-NEXT_PUBLIC_SUPABASE_URL=your-project-url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
-OPENAI_API_KEY=your-openai-api-key
+# Supabase 設定
+# プロダクション環境: https://app.supabase.com/project/_/settings/api から取得
+# 開発環境: ローカルSupabaseを使用
+
+# サーバーサイド用（SSR/API Routes）
+SUPABASE_URL=your-supabase-project-url
+SUPABASE_ANON_KEY=your-supabase-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
+
+# クライアントサイド用（ブラウザ）
+NEXT_PUBLIC_SUPABASE_URL=your-supabase-project-url
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
+
+# Anthropic Claude API キー（必須）
+# PDF財務データ抽出とAI分析に使用
+# https://console.anthropic.com/settings/keys から取得
+ANTHROPIC_API_KEY=your-anthropic-api-key
+NEXT_PUBLIC_ANTHROPIC_API_KEY=your-anthropic-api-key
+
+# Google Cloud Vision API 認証情報（必須）
+# PDF OCR処理に使用
+# サービスアカウントのJSONキー全体を1行で設定
+# https://console.cloud.google.com/apis/credentials
+GOOGLE_CLOUD_CREDENTIALS={"type":"service_account","project_id":"...","private_key_id":"...","private_key":"...","client_email":"...","client_id":"...","auth_uri":"...","token_uri":"...","auth_provider_x509_cert_url":"...","client_x509_cert_url":"...","universe_domain":"googleapis.com"}
+
+# OpenAI API キー（オプション - 現在未使用）
+# https://platform.openai.com/api-keys から取得
+# OPENAI_API_KEY=your-openai-api-key
+# NEXT_PUBLIC_OPENAI_API_KEY=your-openai-api-key
